--- a/lib/application.css
+++ b/lib/application.css
@@ -1,9 +1,7 @@
 canvas {
-  padding-left: 0;
-  padding-right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
 }
 
 #end {
@@ -29,4 +27,9 @@ canvas {
 audio {
   margin: auto;
   display: block;
+}
+
+body {
+  background-image: url("tron-background.jpg");
+  background-size:cover;
 }
